kubernetesdeploy/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./kubernetesdeploy/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "2000"
      port: 2000
      targetPort: 2000
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
